--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎂 Birthday Treasure Hunt 🎈</h1>
+        <h1>🎂 Maja är bäst 🎈</h1>
         <div class="clue-container">
-            <p id="current-clue">First Clue: What's your favorite pet name?</p>
+            <p id="current-clue">Hej Älskling, grattis på din fantastiska dag. Det här scriptet är ganska simpelt, så varje gång du kör om sidan så kommer den inte komma ihåg var du var, så du måste svara igen. Lycka till! Första frågan är: (Twilight * Harry Potter * Vänner) / True Blood"</p>
         </div>
         <input type="text" id="answer-input" placeholder="Enter your answer...">
         <button onclick="checkAnswer()">Submit Answer</button>
-        <p class="error" id="error-message">That's not quite right! Try again! ❤️</p>
+        <p class="error" id="error-message">FEEEEEEEEEL! ❤️</p>
     </div>
 
     <script>
         // You can customize these clues and answers
         const cluesAndAnswers = [
             {
-                clue: "What's your favorite pet name?",
-                answer: "luna",
-                nextClue: "Where did we have our first date?"
+                clue: "Hej Älskling, grattis på din fantastiska dag. Det här scriptet är ganska simpelt, så varje gång du kör om sidan så kommer den inte komma ihåg var du var, så du måste svara igen. Lycka till! Första frågan är: (Twilight * Harry Potter * Vänner) / True Blood",
+                answer: "118",
+                nextClue: "Bra jobbat! Det första du får är ett J."
             },
             {
-                clue: "Where did we have our first date?",
+                clue: "Det kommer en fråga till här snart?",
                 answer: "restaurant",
                 nextClue: "What's my favorite color?"
             },
