--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 nextClue: "Bra jobbat! Det första du får är ett J."
             },
             {
-                clue: "Det kommer en fråga till här snart?",
+                clue: "Bra jobbat MAJSAN. Vi började enkelt. Det första du får från mig är ett J. Det kommer en fråga till här snart",
                 answer: "restaurant",
                 nextClue: "What's my favorite color?"
             },
