--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 nextClue: "Bra jobbat! Det första du får är ett J."
             },
             {
-                clue: "Bra jobbat MAJSAN. Vi började enkelt. Det första du får från mig är ett J. Det kommer en fråga till här snart",
-                answer: "restaurant",
-                nextClue: "What's my favorite color?"
+                clue: "Bra jobbat MAJSAN. Vi började enkelt. Det första du får från mig är ett J. Nästa är en liten gåta: Jag är rund som månen men tom som natten. Ensam är jag ingenting, men ställ mig efter andra siffror och jag gör dem mäktiga. Vad är jag?",
+                answer: "0",
+                nextClue: "VAMOSSSSSSSSSS"
             },
             {
-                clue: "What's my favorite color?",
+                clue: "Snyggt! Nästa bokstav du får är ett Å. Snart kommer det en fråga till här",
                 answer: "blue",
                 nextClue: "🎉 Congratulations! You've found all the clues! Check under the coffee table for your surprise! 🎁"
             }
