--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
                 nextClue: "VAMOSSSSSSSSSS"
             },
             {
+                clue: "Snyggt! Nästa bokstav du får är ett Å. Nästa gåta kräver att du tänker till: jag är ett land av djupa skogar och glittrande sjöar, hem till glasets konst och författarns röster. Astrid har beskrivit mig väl, med barnens fantasi, vad heter platsen där sagornas barn kan va fri?",
+                answer: "HYLTENÄS",
+                nextClue: "You go girl"
+            },            
+            {
+                clue: "WEOOOHHH SMÅLAND4LIFE, hoppas han var snäll. Bokstaven du får av det är k. Snart kommer en bokstav till",
+                answer: "blue",
+                nextClue: "🎉 Congratulations! You've found all the clues! Check under the coffee table for your surprise! 🎁"
+            },            
+            {
                 clue: "Snyggt! Nästa bokstav du får är ett Å. Snart kommer det en fråga till här",
                 answer: "blue",
                 nextClue: "🎉 Congratulations! You've found all the clues! Check under the coffee table for your surprise! 🎁"
