--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             },
             {
                 clue: "Snyggt! Nästa bokstav du får är ett Å. Nästa gåta kräver att du tänker till: jag är ett land av djupa skogar och glittrande sjöar, hem till glasets konst och författarns röster. Astrid har beskrivit mig väl, med barnens fantasi, vad heter platsen där sagornas barn kan va fri?",
-                answer: "HYLTENÄS",
+                answer: "hyltenäs",
                 nextClue: "You go girl"
             },            
             {
