--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                 nextClue: "You go girl"
             },            
             {
-                clue: "WEOOOHHH SMÅLAND4LIFE, hoppas han var snäll. Bokstaven du får av det är k. Snart kommer en bokstav till",
-                answer: "blue",
-                nextClue: "🎉 Congratulations! You've found all the clues! Check under the coffee table for your surprise! 🎁"
+                clue: "WEOOOHHH SMÅLAND4LIFE, hoppas han var snäll. Bokstaven du får av det är K. Nästa gåta borde vara enkel. Kort men mäktig, jag står alltid i centrum, musik och skönhet ger min värld sitt momentum. Med en glimt i ögat och en retfull min, vet du vem jag är, denna lilla gigant i ditt liv?",
+                answer: "avada kedavra",
+                nextClue: "vad funkar bäst, teeeammm wooork"
             },            
             {
-                clue: "Snyggt! Nästa bokstav du får är ett Å. Snart kommer det en fråga till här",
+                clue: "Börjar närma dig något. Du får ett K igen. Snart kommer det en fråga till här",
                 answer: "blue",
                 nextClue: "🎉 Congratulations! You've found all the clues! Check under the coffee table for your surprise! 🎁"
             }
