--- a/index.html
+++ b/index.html
@@ -103,9 +103,19 @@
                 nextClue: "vad funkar bäst, teeeammm wooork"
             },            
             {
-                clue: "Börjar närma dig något. Du får ett K igen. Snart kommer det en fråga till här",
-                answer: "blue",
-                nextClue: "🎉 Congratulations! You've found all the clues! Check under the coffee table for your surprise! 🎁"
+                clue: "Börjar närma dig något. Du får ett K igen. Den här kan vara klurig: Stort som ett torn, blockerar i rätt vinkel hela Stockholm, men egentligen väldigt mjuk inombords och vill få dig att må bättre. Vad står det på mig?",
+                answer: "ikea",
+                nextClue: "Jaaaaaaaa"
+            },
+            {
+                clue: "Hoppas det gick fort för dig att fatta det var sängen jag menade! Nu får du ett Ö. Nu har du bara 2 kvar innan du är i mål! Folkmängd: 699, Distrikt: Stora Kopparbergs distrikt, Area: 73 Hektar, Känt för sina Drama Queens.",
+                answer: "stennäset",
+                nextClue: "falununununun"
+            },
+            {
+                clue: "Drama Queen Central Deluxe. Näst sista bokstaven är Q. Här kommer sista delen: ",
+                answer: "stennäset",
+                nextClue: "falununununun"
             }
         ];
 
