--- a/index.html
+++ b/index.html
@@ -113,9 +113,14 @@
                 nextClue: "falununununun"
             },
             {
-                clue: "Drama Queen Central Deluxe. Näst sista bokstaven är Q. Här kommer sista delen: ",
-                answer: "stennäset",
-                nextClue: "falununununun"
+                clue: "Drama Queen Central Deluxe. Näst sista bokstaven är Q. Här kommer sista delen: Tutankhamons grav upptäcktes, Eisenhower blev president, Sovjetunionen invaderade Ungern, Yitzhak Rabin mördades.",
+                answer: "4e november",
+                nextClue: "yasssqueeen"
+            },
+            {
+                clue: "Weeeoohhhhhhh det var DET. Din sista bokstav är ett D. Ta alla bokstäverna i rätt ordning och gör en bokstavs skifte i positiv riktning. Där hittar du din skatt!",
+                answer: "4e november",
+                nextClue: "yesyesyesyes"
             }
         ];
 
